--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -10,6 +10,7 @@
 <p>My Name: Art Hendela</p>
 <p>Course name: Introduction to Web Development</p>
 <p>Course Number/Section: IS117-004</p>
+  <p>This is another line</p>
 <p>&copy; Art Hendela, 2023</p>
 </body>
 </html>
